--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Start Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <center><h1><b>firefox</b></h1></center>
+    <img src="" alt="">
     <script src="script.js"></script>
 </body>
 </html>
