--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <center><h1><b>firefox</b></h1></center>
-    <img src="" alt="">
+    <h1><b>firefox</b></h1>
+    <img src="icon.jpg" alt="senko-san" width="480" height="480">
     <script src="script.js"></script>
 </body>
 </html>
