--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <img src="icon.jpg" alt="senko-san" width="240" height="240">
     <h1><b>firefox</b></h1><br>
-    <input id="search" type="text"><button id="button">search</button>
+    <input id="search" type="text"><button onclick="go()">search</button>
 
     <script src="script.js"></script>
 </body>
