--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="icon.jpg" alt="senko-san" width="240" height="240">
-    <h1><b>firefox</b></h1><br>
+    <img src="icon.jpg" alt="senko-san">
+    <h1>firefox</h1><br>
     <input id="search" type="text"><button onclick="go()">search</button>
 
     <script src="script.js"></script>
