the shiggy update (+ improvements)

--- a/clicker.html
+++ b/clicker.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>clicker</title>
     <link rel="stylesheet" href="css/clicker.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <p>you have <b><span id="clickCount">0</span></b> clicks</p>
