--- a/404.html
+++ b/404.html
@@ -8,6 +8,9 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-    <h1>page not found...</h1>
+    <h1>stop</h1>
+    <img src="stop.jpg">
+    <p>there is no page here.</p>
+    <p><a href="index.html">home</a></p>
 </body>
 </html>
