the shiggy.gif update

--- a/shiggy/auto.html
+++ b/shiggy/auto.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p><b><span id="shiggys">0</span></b> shiggys</p>
-    <img id="shiggyImg" src="shiggy-split/1.gif">
+    <img id="shiggyImg" src="shiggy.gif">
 
     <script src="auto.js"></script>
 </body>
