--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="icon.jpg" alt="senko-san">
     <h1>firefox</h1><br>
     <input id="search" type="text"><button onclick="go()">search</button>
-    <p><a href="shiggy/index.html"></a></p>
+    <p><a href="shiggy/index.html">shiggy</a></p>
 
     <script src="js/script.js"></script>
 </body>
