--- a/clicker.html
+++ b/clicker.html
@@ -12,9 +12,17 @@
     <button onclick="clicker()">click</button>
 
     <hr>
-        <div class="flex">
-        <div class="left"></div>
-        <div class="right"></div>
+
+    <div class="flex">
+
+        <div class="left">
+
+        </div>
+
+        <div class="right">
+            
+        </div>
+
     </div>
 
     <script src="js/clicker.js"></script>
