made an images folder

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-    <img src="icon.jpg" alt="senko-san">
+    <img src="images/icon.jpg" alt="senko-san">
     <h1>firefox</h1><br>
     <input id="search" type="text"><button onclick="go()">search</button>
     <p><a href="shiggy/index.html">shiggy</a></p>
