--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>stop</h1>
-    <img src="stop.jpg">
+    <img src="images/stop.jpg">
     <p>there is no page here.</p>
     <p><a href="index.html">home</a></p>
 </body>
